--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head> 
     <title>Emir Cuneyt Akkutlu</title> 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="eca/index.css">
   </head> 
   <body> 
-    <script type="text/javascript" src="index.js"> 
+    <script type="text/javascript" src="eca/index.js"> 
     </script> 
     <div id="console"></div> 
     
