--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head> 
     <title>Emir Cuneyt Akkutlu</title> 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
-    <link rel="stylesheet" type="text/css" href="eca/index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head> 
   <body> 
     <script type="text/javascript" src="eca/index.js"> 
