--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
   </head> 
   <body> 
-    <script type="text/javascript" src="eca/index.js"> 
+    <script type="text/javascript" src="index.js"> 
     </script> 
     <div id="console"></div> 
     
