--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head> 
     <title>Emir Cuneyt Akkutlu</title> 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
+    <script data-ad-client="ca-pub-9937574569286216" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css">
   </head> 
   <body> 
